fixed horizontal scroll bug

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,17 +5,12 @@
   line-height: 1.6;
 }
 
-:root {
-  overflow-x: hidden;
-}
-
 span {
   color: #FF7597;
 }
 
 section {
   height: 100vh;
-  width: 100vw;
 }
 
 /* iPhone 6+, 7+, 8+ portrait*/
